--- a/css-posicionamento/Brafé 1/css/style.css
+++ b/css-posicionamento/Brafé 1/css/style.css
@@ -375,3 +375,51 @@ h2.produtos-mineiro::before {
   margin: 0 10px;
   display: block;
 }
+
+/* Reponsivo */
+
+@media (max-width: 739px) {
+  .menu-nav {
+    float: none;
+    clear: both;
+  }
+
+  .intro {
+    padding: 60px 0;
+  }
+
+  .sobre-container {
+    max-width: 300px;
+  }
+
+  .sobre-item {
+    width: 300px;
+    margin: 0 auto;
+  }
+
+  .produtos-container {
+    max-width: 300px;
+  }
+
+  .produtos-item {
+    margin: 0 auto 20px auto;
+  }
+}
+
+@media (min-width: 740px) and (max-width: 980px) {
+  .sobre-container {
+    max-width: 720px;
+  }
+
+  .sobre-item {
+    width: 340px;
+  }
+
+  .produtos-container {
+    max-width: 720px;
+  }
+
+  .produtos-item {
+    width: 220px;
+  }
+}
