--- a/css-posicionamento/Brafé 1 - Flexbox/css/style.css
+++ b/css-posicionamento/Brafé 1 - Flexbox/css/style.css
@@ -133,10 +133,13 @@ body {
   background: #e7e4d8;
   border-top: 3px solid #d6d3c8;
   border-bottom: 3px solid #d6d3c8;
+  padding: 60px 0;
 }
 
 .produtos-item h2 {
   font-size: 2.25em;
+  text-align: center;
+  margin-bottom: 20px;
 }
 
 .produtos-item h2::before {
@@ -148,6 +151,7 @@ body {
   border-radius: 50%;
   border: 5px solid #e7e4d8;
   box-shadow: 0 0 0 5px currentColor;
+  margin: 20px auto;
 }
 
 h2.produtos-paulista::before {
@@ -160,6 +164,11 @@ h2.produtos-carioca::before {
 
 h2.produtos-mineiro::before {
   color: #d7a54d;
+}
+
+.produtos-item {
+  margin: 0 10px 40px 10px;
+  flex: 1;
 }
 
 .produtos-item p {
@@ -175,17 +184,43 @@ h2.produtos-mineiro::before {
   font-size: 1.125em;
   font-weight: bold;
   text-transform: uppercase;
+  width: 180px;
+  display: block;
+  padding: 15px 0;
+  margin: 20px auto 0 auto;
 }
 
 /* Locais */
 
+.locais {
+  padding: 60px 0;
+}
+
+.locais-item {
+  margin-bottom: 40px;
+}
+
+.locais-img,
+.locais-info {
+  flex: 1;
+  margin: 0 10px;
+}
+
+.locais-img {
+  display: block;
+  max-width: 100%;
+}
+
 .locais-item h2 {
   font-size: 2.25em;
+  margin-bottom: 20px;
 }
 
 .locais-item p {
   font-size: 1.125em;
   line-height: 1.4em;
+  max-width: 320px;
+  margin-bottom: 40px;
 }
 
 .locais-item a {
@@ -194,6 +229,7 @@ h2.produtos-mineiro::before {
   text-decoration: none;
   border: 3px solid;
   color: #252525;
+  padding: 10px 20px;
 }
 
 /* Assine */
